Added the Runestone with the correct name and have commented all .Java files.

--- a/src/main/resources/assets/gramarye/lang/en_us.json
+++ b/src/main/resources/assets/gramarye/lang/en_us.json
@@ -3,6 +3,7 @@
 
   "block.gramarye.infernal_stone": "Infernal Stone",
   "block.gramarye.magical_plank": "Magical Plank",
+  "block.gramarye.arcane_runestone": "Arcane Runestone",
 
   "creativetab.gramarye_tab": "Gramarye"
 
