Added the Runestone with the correct name and have commented all .Java files.

--- a/src/main/resources/assets/gramarye/lang/en_us.json
+++ b/src/main/resources/assets/gramarye/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.gramarye.magical_paper": "Magical Paper",
+  "item.gramarye.forbidden_fragment": "Forbidden Fragment",
 
   "block.gramarye.infernal_stone": "Infernal Stone",
   "block.gramarye.magical_plank": "Magical Plank",
